Don't exit when push doesn't fail
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -153,8 +153,7 @@ jobs:
           remote_exists=$(git ls-remote --heads fork "$branch")
           if [ -z "$remote_exists" ]; then
             # remote doesn't exist.
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/release.git" "$branch:$branch" -f
-            exit $?
+            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/release.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
           if git diff --quiet "fork/$branch" "$branch"; then
@@ -176,8 +175,7 @@ jobs:
           remote_exists=$(git ls-remote --heads fork "$branch")
           if [ -z "$remote_exists" ]; then
             # remote doesn't exist.
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/hack.git" "$branch:$branch" -f
-            exit $?
+            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/hack.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
           if git diff --quiet "fork/$branch" "$branch"; then
@@ -202,8 +200,7 @@ jobs:
           remote_exists=$(git ls-remote --heads fork "$branch")
           if [ -z "$remote_exists" ]; then
             # remote doesn't exist.
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-            exit $?
+            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
           if git diff --quiet "fork/$branch" "$branch"; then
@@ -227,8 +224,7 @@ jobs:
           remote_exists=$(git ls-remote --heads fork "$branch")
           if [ -z "$remote_exists" ]; then
             # remote doesn't exist.
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-            exit $?
+            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
           if git diff --quiet "fork/$branch" "$branch"; then
@@ -252,8 +248,7 @@ jobs:
           remote_exists=$(git ls-remote --heads fork "$branch")
           if [ -z "$remote_exists" ]; then
             # remote doesn't exist.
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-            exit $?
+            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
           if git diff --quiet "fork/$branch" "$branch"; then
@@ -277,8 +272,7 @@ jobs:
           remote_exists=$(git ls-remote --heads fork "$branch")
           if [ -z "$remote_exists" ]; then
             # remote doesn't exist.
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-            exit $?
+            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
           if git diff --quiet "fork/$branch" "$branch"; then
@@ -302,8 +296,7 @@ jobs:
           remote_exists=$(git ls-remote --heads fork "$branch")
           if [ -z "$remote_exists" ]; then
             # remote doesn't exist.
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-            exit $?
+            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
           if git diff --quiet "fork/$branch" "$branch"; then
@@ -327,8 +320,7 @@ jobs:
           remote_exists=$(git ls-remote --heads fork "$branch")
           if [ -z "$remote_exists" ]; then
             # remote doesn't exist.
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-            exit $?
+            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
           if git diff --quiet "fork/$branch" "$branch"; then
@@ -352,8 +344,7 @@ jobs:
           remote_exists=$(git ls-remote --heads fork "$branch")
           if [ -z "$remote_exists" ]; then
             # remote doesn't exist.
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-            exit $?
+            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
           if git diff --quiet "fork/$branch" "$branch"; then
@@ -377,8 +368,7 @@ jobs:
           remote_exists=$(git ls-remote --heads fork "$branch")
           if [ -z "$remote_exists" ]; then
             # remote doesn't exist.
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-            exit $?
+            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
           if git diff --quiet "fork/$branch" "$branch"; then
@@ -402,8 +392,7 @@ jobs:
           remote_exists=$(git ls-remote --heads fork "$branch")
           if [ -z "$remote_exists" ]; then
             # remote doesn't exist.
-            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f
-            exit $?
+            git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/$repo.git" "$branch:$branch" -f || exit 1
           fi
           git fetch fork "$branch"
           if git diff --quiet "fork/$branch" "$branch"; then
