--- a/pkg/konfluxgen/fbc-builder.yaml
+++ b/pkg/konfluxgen/fbc-builder.yaml
@@ -50,6 +50,10 @@ spec:
     - name: workspace
       workspace: workspace
   params:
+  - default: []
+    description: Array of --build-arg values ("arg=value" strings) for buildah
+    name: build-args
+    type: array
   - default: "true"
     description: Build a source image.
     name: build-source-image
@@ -179,6 +183,9 @@ spec:
       workspace: git-auth
   - name: build-container
     params:
+    - name: BUILD_ARGS
+      value:
+        - $(params.build-args[*])
     - name: IMAGE
       value: $(params.output-image)
     - name: DOCKERFILE
