--- a/pkg/konfluxgen/pipeline-run.template.yaml
+++ b/pkg/konfluxgen/pipeline-run.template.yaml
@@ -50,11 +50,11 @@ spec:
     {{{- end }}}
     {{{- if .PrefetchDeps.PrefetchInput }}}
     - name: prefetch-input
-      value: "{{{ .PrefetchDeps.PrefetchInput }}}"
+      value: '{{{ .PrefetchDeps.PrefetchInput }}}'
     {{{- end }}}
     {{{- if .PrefetchDeps.DevPackageManagers }}}
     - name: prefetch-input-dev-package-managers
-      value: "{{{ .PrefetchInput.DevPackageManagers }}}"
+      value: '{{{ .PrefetchDeps.DevPackageManagers }}}'
     {{{- end }}}
   pipelineRef:
     name: {{{ .Pipeline }}}
