--- a/pkg/konfluxgen/kustomize/kustomize-docker-build/kustomization.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-docker-build/kustomization.yaml
@@ -6,15 +6,27 @@ resources:
 patches:
   - path: ../patch_additional_tags.patch.yaml
     target:
-      name: docker-build
+      kind: Pipeline
   - path: ../patch_prefetch-input_dev-package-managers.patch.yaml
     target:
-      name: docker-build
+      kind: Pipeline
   - path: ../patch_source_image.patch.yaml
     target:
-      name: docker-build
+      kind: Pipeline
   - path: ../patch_snyk_args.patch.yaml
     target:
-      name: docker-build
+      kind: Pipeline
+  - path: ../patch_build_platforms_default.patch.yaml
+    target:
+      kind: Pipeline
+  - path: ../patch_rpms_scan_remove.patch.yaml
+    target:
+      kind: Pipeline
+  - patch: |-
+      - op: replace
+        path: /metadata/name
+        value: docker-build
+    target:
+      kind: Pipeline
 openapi:
   path: ../pipeline_schema.json
