--- a/pkg/konfluxgen/kustomize/kustomize-fbc-builder/kustomization.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-fbc-builder/kustomization.yaml
@@ -6,12 +6,12 @@ resources:
 patches:
   - path: ../patch_additional_tags.patch.yaml
     target:
-      name: fbc-builder
+      kind: Pipeline
   - path: ../patch_source_image.patch.yaml
     target:
-      name: fbc-builder
+      kind: Pipeline
   - path: ../patch_snyk_args.patch.yaml
     target:
-      name: docker-build
+      kind: Pipeline
 openapi:
   path: ../pipeline_schema.json
