Override index image to keep the previous name
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -365,6 +365,7 @@ repositories:
     - .*rosa-classic.*
   imageNameOverrides:
     serverless-operator: bundle
+    serverless-operator-index: index
   imagePrefix: serverless
   org: openshift-knative
   promotion:
