--- a/pkg/konfluxgen/pipeline-run.template.yaml
+++ b/pkg/konfluxgen/pipeline-run.template.yaml
@@ -13,9 +13,9 @@ metadata:
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: {{{ truncate ( sanitize .ApplicationName ) }}}
-    appstudio.openshift.io/component: {{{ truncate ( sanitize ( print .ProjectDirectoryImageBuildStepConfiguration.To "-" .ReleaseBuildConfiguration.Metadata.Branch ) ) }}}
+    appstudio.openshift.io/component: {{{ sanitize .ComponentName }}}
     pipelines.appstudio.openshift.io/type: build
-  name: {{{ truncate ( sanitize ( print .ProjectDirectoryImageBuildStepConfiguration.To "-" .ReleaseBuildConfiguration.Metadata.Branch ) ) }}}-on-{{{ replace .Event "_" "-" }}}
+  name: {{{ sanitize .ComponentName }}}-on-{{{ replace .Event "_" "-" }}}
   namespace: ocp-serverless-tenant
 spec:
   params:
