Per application RPA
the RPA has the filename that is not application name dependent, so
new applications will override the existing ones rather than creating
new ones, so that we can just take them as they are and commit to
"`releng`".

Remove `v` prefix from tags.

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/pkg/konfluxgen/releaseplanadmission.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission.template.yaml
@@ -19,4 +19,4 @@ spec:
       tags:
         - "{{ git_sha }}"
         - "{{ git_short_sha }}"
-        - "v{{{ .Version }}}"
+        - "{{{ .Version }}}"
