--- a/.konflux/releaseplanadmissions/serverless-operator-135-1350-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1350-stage.yaml
@@ -1,7 +1,7 @@
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: ReleasePlanAdmission
 metadata:
-  name: serverless-operator-135
+  name: serverless-operator-135-1350
   namespace: rhtap-releng-tenant
 spec:
   applications: [serverless-operator-135]
