Per application RPA (#340)
* Per application RPA

the RPA has the filename that is not application name dependent, so
new applications will override the existing ones rather than creating
new ones, so that we can just take them as they are and commit to
"`releng`".

Remove `v` prefix from tags.

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Add patch-level version

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

---------

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/.konflux/releaseplanadmissions/serverless-operator-135-1350-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1350-prod.yaml
@@ -1,7 +1,7 @@
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: ReleasePlanAdmission
 metadata:
-  name: serverless-operator-135
+  name: serverless-operator-135-1350
   namespace: rhtap-releng-tenant
 spec:
   applications: [serverless-operator-135]
@@ -128,4 +128,4 @@ spec:
       tags:
         - "{{ git_sha }}"
         - "{{ git_short_sha }}"
-        - "v1.35.0"
+        - "1.35.0"
