--- a/.konflux/applications/serverless-operator-135/components/serverless-bundle-135.yaml
+++ b/.konflux/applications/serverless-operator-135/components/serverless-bundle-135.yaml
@@ -10,7 +10,15 @@ spec:
    
   build-nudges-ref:
     
-    - "serverless-index-135"
+    - "serverless-index-135-fbc-413-index"
+    
+    - "serverless-index-135-fbc-414-index"
+    
+    - "serverless-index-135-fbc-415-index"
+    
+    - "serverless-index-135-fbc-416-index"
+    
+    - "serverless-index-135-fbc-417-index"
     
   
   source:
