Add set stagedIndex in stage RPA for FBCs

--- a/pkg/konfluxgen/releaseplanadmission-fbc.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-fbc.template.yaml
@@ -12,6 +12,9 @@ spec:
   policy: fbc-standard
   data:
     fbc:
+      {{{- if .StagedIndex }}}
+      stagedIndex: true
+      {{{- end }}}
       fromIndex: "{{{ .FromIndex }}}"
       targetIndex: "{{{ .TargetIndex }}}"
       publishingCredentials: "{{{ .PublishingCredentials }}}"
