Force konflux index image for serverless-operator periodic tests
Only for latest OCP

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -13,6 +13,7 @@ config:
       openShiftVersions:
       - generateCustomConfigs: true
         useClusterPool: true
+        cronForceKonfluxIndex: true
         version: "4.16"
       - onDemand: true
         version: "4.13"
