--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -11,11 +11,12 @@ config:
         - name: GO_RUNTIME
           pullSpec: registry.access.redhat.com/ubi8/ubi-minimal
       openShiftVersions:
-      - generateCustomConfigs: true
+      - cronForceKonfluxIndex: true
+        generateCustomConfigs: true
         useClusterPool: true
-        cronForceKonfluxIndex: true
         version: "4.16"
-      - onDemand: true
+      - cronForceKonfluxIndex: true
+        onDemand: true
         version: "4.13"
     release-1.35:
       konflux:
