--- a/.konflux/releaseplanadmissions/serverless-operator-135-1350-fbc-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1350-fbc-prod.yaml
@@ -1,6 +1,10 @@
+---
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: ReleasePlanAdmission
 metadata:
+  labels:
+    release.appstudio.openshift.io/auto-release: "true"
+    pp.engineering.redhat.com/business-unit: hybrid-platforms
   name: serverless-operator-135-1350-fbc-prod
   namespace: rhtap-releng-tenant
 spec:
@@ -13,6 +17,10 @@ spec:
   origin: ocp-serverless-tenant
   policy: fbc-standard
   data:
+    releaseNotes:
+      product_id: 579
+      product_name: "OpenShift Serverless"
+      product_version: "1.35.0"
     fbc:
       fromIndex: "registry-proxy.engineering.redhat.com/rh-osbs/iib-pub:{{ OCP_VERSION }}"
       targetIndex: "quay.io/redhat/redhat----redhat-operator-index:{{ OCP_VERSION }}"
@@ -35,4 +43,3 @@ spec:
     serviceAccountName: release-index-image-prod
     timeouts:
       pipeline: "4h0m0s"
-
