--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -15,10 +15,12 @@ config:
         - name: JAVA_RUNTIME
           value: registry.access.redhat.com/ubi8/openjdk-21-runtime
       openShiftVersions:
-      - generateCustomConfigs: true
+      - cronForceKonfluxIndex: true
+        generateCustomConfigs: true
         useClusterPool: true
         version: "4.16"
-      - onDemand: true
+      - cronForceKonfluxIndex: true
+        onDemand: true
         version: "4.13"
     release-1.35:
       konflux:
