--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -55,7 +55,7 @@ repositories:
           cluster_profile: aws
           test:
           - as: operator-e2e
-            commands: make test-e2e-with-kafka
+            commands: FORCE_KONFLUX_INDEX=true make test-e2e-with-kafka
             from: serverless-source-image
             resources:
               limits:
@@ -64,7 +64,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: make test-upstream-e2e-no-upgrade
+            commands: FORCE_KONFLUX_INDEX=true make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
               limits:
@@ -73,7 +73,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-eventing-kafka-broker-e2e
-            commands: make test-upstream-e2e-kafka-no-upgrade
+            commands: FORCE_KONFLUX_INDEX=true make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
               limits:
@@ -96,7 +96,7 @@ repositories:
           cluster_profile: azure4
           test:
           - as: operator-e2e
-            commands: make test-e2e-with-kafka
+            commands: FORCE_KONFLUX_INDEX=true make test-e2e-with-kafka
             from: serverless-source-image
             resources:
               limits:
@@ -105,7 +105,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: make test-upstream-e2e-no-upgrade
+            commands: FORCE_KONFLUX_INDEX=true make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
               limits:
@@ -114,7 +114,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-eventing-kafka-broker-e2e
-            commands: make test-upstream-e2e-kafka-no-upgrade
+            commands: FORCE_KONFLUX_INDEX=true make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
               limits:
@@ -137,7 +137,7 @@ repositories:
           cluster_profile: gcp
           test:
           - as: operator-e2e
-            commands: make test-e2e-with-kafka
+            commands: FORCE_KONFLUX_INDEX=true make test-e2e-with-kafka
             from: serverless-source-image
             resources:
               limits:
@@ -146,7 +146,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: make test-upstream-e2e-no-upgrade
+            commands: FORCE_KONFLUX_INDEX=true make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
               limits:
@@ -155,7 +155,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-eventing-kafka-broker-e2e
-            commands: make test-upstream-e2e-kafka-no-upgrade
+            commands: FORCE_KONFLUX_INDEX=true make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
               limits:
@@ -197,7 +197,7 @@ repositories:
             HYPERSHIFT_NODE_COUNT: "6"
           test:
           - as: operator-e2e
-            commands: make USER_MANAGEMENT_ALLOWED=false test-e2e-with-kafka
+            commands: FORCE_KONFLUX_INDEX=true USER_MANAGEMENT_ALLOWED=false make test-e2e-with-kafka
             from: serverless-source-image
             resources:
               limits:
@@ -206,7 +206,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: make test-upstream-e2e-no-upgrade
+            commands: FORCE_KONFLUX_INDEX=true make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
               limits:
@@ -215,7 +215,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-eventing-kafka-broker-e2e
-            commands: make test-upstream-e2e-kafka-no-upgrade
+            commands: FORCE_KONFLUX_INDEX=true make test-upstream-e2e-kafka-no-upgrade
             from: serverless-source-image
             resources:
               limits:
@@ -253,7 +253,7 @@ repositories:
           - ref: osd-create-create
           test:
           - as: operator-e2e
-            commands: make test-e2e-with-kafka
+            commands: FORCE_KONFLUX_INDEX=true make test-e2e-with-kafka
             from: serverless-source-image
             resources:
               limits:
@@ -262,7 +262,7 @@ repositories:
                 cpu: 100m
                 memory: 200Mi
           - as: knative-serving-eventing-e2e
-            commands: make test-upstream-e2e-no-upgrade
+            commands: FORCE_KONFLUX_INDEX=true make test-upstream-e2e-no-upgrade
             from: serverless-source-image
             resources:
               limits:
@@ -284,7 +284,7 @@ repositories:
           cluster_profile: gcp
           test:
           - as: operator-e2e
-            commands: make HA=false test-e2e-with-kafka-no-tracing
+            commands: FORCE_KONFLUX_INDEX=true HA=false make test-e2e-with-kafka-no-tracing
             from: serverless-source-image
             resources:
               limits:
@@ -312,7 +312,7 @@ repositories:
           cluster_profile: vsphere-elastic
           test:
           - as: operator-e2e
-            commands: make HA=false test-e2e-with-kafka
+            commands: FORCE_KONFLUX_INDEX=true HA=false make test-e2e-with-kafka
             from: serverless-source-image
             resources:
               limits:
