--- a/cmd/generate/dockerfile-templates/MustGatherDockerfile.template
+++ b/cmd/generate/dockerfile-templates/MustGatherDockerfile.template
@@ -1,11 +1,9 @@
 # DO NOT EDIT! Generated Dockerfile for {{.main}}.
-ARG BUILDER=brew.registry.redhat.io/rh-osbs/openshift-ose-must-gather:latest
+ARG MUSTGATHER={{.mustGather}}
 ARG RUNTIME=registry.access.redhat.com/ubi8/ubi-minimal
-FROM $BUILDER AS builder
+FROM $MUSTGATHER AS builder
 
 FROM $RUNTIME
-
-RUN microdnf install -y rsync tar
 
 COPY --from=builder /usr/bin/oc /usr/bin/oc
 COPY --from=builder /usr/bin/gather /usr/bin/gather_original
