Ubi images have tzdata installed but zoneinfo is not there
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/cmd/generate/dockerfile-templates/DefaultDockerfile.template
+++ b/cmd/generate/dockerfile-templates/DefaultDockerfile.template
@@ -15,9 +15,8 @@ FROM $GO_RUNTIME
 
 ARG VERSION={{.version}}
 
-{{- if .additional_packages }}
-
-RUN microdnf install {{ .additional_packages }}
+{{- range $c := .additional_instructions }}
+{{ $c }}
 {{- end }}
 
 COPY --from=builder /usr/bin/main {{.app_file}}
