Add `standing-attribution` label in RP to inherit author to the release.

--- a/pkg/konfluxgen/releaseplan.template.yaml
+++ b/pkg/konfluxgen/releaseplan.template.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     release.appstudio.openshift.io/auto-release: '{{{ .AutoRelease }}}'
     release.appstudio.openshift.io/releasePlanAdmission: '{{{ truncate ( sanitize .ReleasePlanAdmissionName ) }}}'
+    release.appstudio.openshift.io/standing-attribution: 'true'
   name: {{{ truncate ( sanitize .Name ) }}}
 spec:
   releaseNotes:
