Add support for Serving 1.16

--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -33,6 +33,14 @@ config:
         version: "4.16"
       - onDemand: true
         version: "4.13"
+    release-v1.16:
+      konflux:
+        enabled: true
+      openShiftVersions:
+      - useClusterPool: true
+        version: "4.16"
+      - onDemand: true
+        version: "4.13"
 repositories:
 - dockerfiles:
     matches:
