--- a/config/serving-net-istio.yaml
+++ b/config/serving-net-istio.yaml
@@ -20,6 +20,14 @@ config:
         version: "4.16"
       - onDemand: true
         version: "4.13"
+    release-v1.16:
+      konflux:
+        enabled: true
+      openShiftVersions:
+      - useClusterPool: true
+        version: "4.16"
+      - onDemand: true
+        version: "4.13"
 repositories:
 - dockerfiles: {}
   ignoreConfigs: {}
