--- a/pkg/konfluxgen/apply-konflux-manifests-workflow.yaml
+++ b/pkg/konfluxgen/apply-konflux-manifests-workflow.yaml
@@ -5,9 +5,21 @@ on:
     paths:
       - ".konflux/**"
     branches:
-    - 'main',
+    - 'main'
     - 'release-v*'
 jobs:
-  konflux-apply:
-    uses: openshift-knative/hack/.github/workflows/reusable-apply-konflux-manifests.yaml@main
-    secrets: inherit
+  trigger-konflux-apply:
+    name: Trigger Konflux Apply
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger Konflux Apply
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.SERVERLESS_QE_ROBOT }}
+          script: |
+            github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: 'hack',
+              workflow_id: 'apply-konflux-manifests.yaml',
+              ref: 'main',
+            })
