--- a/config/kn-plugin-event.yaml
+++ b/config/kn-plugin-event.yaml
@@ -1,16 +1,16 @@
 config:
   branches:
-    release-1.13:
-      openShiftVersions:
-        - version: '4.15'
-    release-1.14:
-      openShiftVersions:
-        - version: '4.15'
     release-1.15:
       konflux:
         enabled: true
       openShiftVersions:
         - version: '4.16'
+          useClusterPool: true
+    release-1.16:
+      konflux:
+        enabled: true
+      openShiftVersions:
+        - version: '4.17'
           useClusterPool: true
     release-next:
       openShiftVersions:
@@ -20,9 +20,13 @@ config:
 repositories:
 - org: openshift-knative
   repo: kn-plugin-event
-  imagePrefix: client-plugin-event
+  imagePrefix: kn-plugin-event
   imageNameOverrides:
     kn-event-sender: sender
+  ignoreConfigs:
+    matches:
+    - release-1\.13
+    - release-1\.14
   promotion:
     namespace: knative
     template: release-${version}
@@ -34,33 +38,10 @@ repositories:
         cpu: 100m
         memory: 200Mi
   slackChannel: '#knative-client'
+  e2e:
+  - match: e2e
   tests:
   - as: unit
     commands: make test
     container:
       from: src
-  - as: e2e
-    cluster_claim:
-      architecture: amd64
-      cloud: aws
-      owner: serverless-ci
-      product: ocp
-      timeout: 2h30m0s
-      version: "4.16"
-    steps:
-      test:
-      - as: test
-        commands: make e2e
-        dependencies:
-        - env: TEST_IMAGES_EVENTSHUB
-          name: client-plugin-event-test-eventshub
-        - env: TEST_IMAGES_WATHOLA_FORWARDER
-          name: client-plugin-event-test-wathola-forwarder
-        - env: IMAGES_KN_EVENT_SENDER
-          name: client-plugin-event-sender
-        from: src
-        resources:
-          requests:
-            cpu: 100m
-        timeout: 30m0s
-      workflow: generic-claim
